[project]
name = "sdh"
version = "0.1.0"
description = "Constrained Off-Policy RL algorithms (AS-SAC, VT-MPO, WCSAC)"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch>=2.0.0",
    "safety-gymnasium>=1.0.0",
    "scipy>=1.10.0",
    "tensorboard>=2.13.0",
    "tyro>=0.5.0",
    "mo-gymnasium",
    "moviepy>=1.0.3",
    "optuna>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
